entity_macros/tests/ui/derive/ent/missing-ent-attr.stderr
error: Missing ent(...) attribute
 --> $DIR/missing-ent-attr.rs:5:5
  |
5 |     id: Id,
  |     ^^
